# py_moysklad

./: .flake8  LICENSE  Makefile  README.md  pyproject.toml  renovate.json
.github/workflows/: publish.yml  test.yml
py_moysklad/: client.py  exceptions.py  http.py
py_moysklad/clients/: entity_client.py  generic.py  product_client.py
py_moysklad/entities/: address.py  assortment.py  attached_file.py  attachment.py  attribute.py  barcode.py  cashier.py  context.py  country.py  currency.py  entity.py  group.py  image.py  meta.py  meta_entity.py  price.py  price_type.py  product_folder.py  region.py  state.py  store.py  uom.py
py_moysklad/entities/agents/: agent.py  counterparty.py  employee.py  organization.py
py_moysklad/entities/discounts/: accumulation_discount.py  bonus_program.py  discount.py  good_discount.py  personal_discount.py  round_off_discount.py  special_price_discount.py
py_moysklad/entities/products/: abstract_product.py  good_payment_item_type.py  good_tax_system.py  product.py
py_moysklad/responses/: list_entity.py
py_moysklad/utils/: exclude_optional_fields.py
scripts/: test.sh
tests/: conftest.py  test_client.py
tests/.fixtures/entities/: product.json  product_create_response.json  product_list.json  product_update_response.json
tests/product/: test_product_create.py  test_product_delete.py  test_product_list.py  test_product_retrieve.py  test_product_update.py
