[tool.isort]
line_length = 120
skip = ['venv', 'env']
extra_standard_library = ['pytest']
known_standard_library = ['typing']
multi_line_output = 3
use_parentheses = true
case_sensitive = true
include_trailing_comma = true
force_grid_wrap = 0
sections = ['FUTURE', 'STDLIB', 'THIRDPARTY', 'FIRSTPARTY', 'LOCALFOLDER']

[tool.black]
line-length = 120

[tool.poetry]
name = "py_moysklad"
version = "0.1.0"
description = ""
authors = ["NerV <voldemar.krs@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
api-client = "^1.3.1"
pydantic = "^1.8.2"

[tool.poetry.dev-dependencies]
pytest-cov = "*"
pytest-deadfixtures = "*"
pytest-env = "*"
pytest-mock = "*"
pytest-randomly = "*"
pytest-xdist = "*"
pytest-icdiff = "*"
pytest-sugar = "*"
black = "*"
flake8-absolute-import = "*"
flake8-black = "*"
flake8-bugbear = "*"
flake8-commas = "*"
flake8-eradicate = "*"
flake8-isort = "*"
flake8-mock = "*"
flake8-pie = "*"
flake8-print = "*"
flake8-printf-formatting = "*"
flake8-pytest = "*"
flake8-pytest-style = "*"
flake8-tidy-imports = "*"
flake8-quotes = "*"
flake8-variables-names = "*"
flake8-simplify = "*"
pytest-httpx = "^0.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
